# zepp

./: .gitignore  README.md
backend/: .env.example  .gitignore  api.py  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/v1/: audio_ws.py
backend/app/api/v1/routers/: audio_ws.py  auth.py  transcripts.py
backend/app/config/: settings.py
backend/app/controllers/: audio_transcription.py
backend/app/core/: config.py
backend/app/crud/: transcript.py  user.py
backend/app/db/: database.py
backend/app/models/: __init__.py  transcript.py  user.py
backend/app/routers/: auth.py  transcripts.py
backend/app/schemas/: auth.py  transcript.py  user.py
backend/app/utils/: security.py
backend/tests/: test_schemas.py  test_security.py
frontend-app/flutter_app/: .gitignore  pubspec.yaml
frontend-app/flutter_app/ios/Runner/: Info.plist
frontend-app/flutter_app/lib/: main.dart
frontend-app/flutter_app/lib/core/: app_config.dart  app_theme.dart  theme_notifier.dart
frontend-app/flutter_app/lib/core/cache/: cached_transcript.dart  sync_queue_service.dart  transcript_cache_service.dart
frontend-app/flutter_app/lib/core/database/: app_database.dart  app_database.g.dart
frontend-app/flutter_app/lib/core/widgets/: glass_widgets.dart  (+1 more)
frontend-app/flutter_app/linux/flutter/: generated_plugins.cmake
frontend-app/flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend-app/flutter_app/test/: widget_test.dart
frontend-app/flutter_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+21 files in other folders)
