[project]
name = "voiceai-backend"
version = "0.1.0"
description = "FastAPI backend for VoiceAI – real-time voice transcription service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "cachetools>=5.3.0",
]
